# algorithmia-rust

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  index.html  search-index.js
algorithmia/: Algorithmia.t.html  Cargo.toml  README.md  enum.AlgorithmiaError.html  index.html  sidebar-items.js  stability.html  stability.json  static.API_BASE_URL.html  struct.Algorithmia.html  struct.ApiClient.html  struct.ApiErrorResponse.html  struct.Service.html  struct.Url.html
algorithmia/algo/: AlgoInput.t.html  AlgoOptions.t.html  AlgoOutput.t.html  enum.AlgoInput.html  enum.AlgoIo.html  enum.AlgoOutput.html  enum.Version.html  index.html  sidebar-items.js  struct.AlgoMetadata.html  struct.AlgoOptions.html  struct.AlgoRef.html  struct.AlgoResponse.html  struct.Algorithm.html  trait.AlgoEntryPoint.html  trait.DecodedEntryPoint.html  trait.EntryPoint.html
algorithmia/algo/algorithm/: AlgoMetadata.t.html  AlgoRef.t.html  AlgoResponse.t.html  DecodedEntryPoint.t.html  EntryPoint.t.html  enum.AlgoInput.html  enum.AlgoIo.html  enum.AlgoOutput.html  sidebar-items.js  struct.AlgoMetadata.html  struct.AlgoOptions.html  struct.AlgoRef.html  struct.AlgoResponse.html  struct.Algorithm.html  trait.AlgoEntryPoint.html  trait.DecodedEntryPoint.html  trait.EntryPoint.html
algorithmia/algo/version/: enum.Version.html  sidebar-items.js
algorithmia/algorithm/: enum.Version.html  index.html  sidebar-items.js  struct.Algorithm.html  struct.AlgorithmOutput.html  struct.AlgorithmService.html  type.AlgorithmJsonResult.html  type.AlgorithmResult.html
algorithmia/client/: ApiAuth.t.html  enum.ApiAuth.html  enum.Body.html  index.html  sidebar-items.js  struct.HttpClient.html  struct.Response.html
algorithmia/collection/: index.html  sidebar-items.js  struct.Collection.html  struct.CollectionAcl.html  struct.CollectionCreated.html  struct.CollectionDeleted.html  struct.CollectionFileAdded.html  struct.CollectionFileDeleted.html  struct.CollectionService.html  struct.CollectionShow.html  type.CollectionCreatedResult.html  type.CollectionDeletedResult.html  type.CollectionFileAddedResult.html  type.CollectionFileDeletedResult.html  type.CollectionShowResult.html
algorithmia/data/: DataObject.t.html  DeletedResult.t.html  XDataType.t.html  XErrorMessage.t.html  enum.DataObject.html  enum.DataType.html  fn.parse_data_uri.html  index.html  parse_data_uri.v.html  sidebar-items.js  struct.DeletedResult.html  struct.XDataType.html  struct.XErrorMessage.html
algorithmia/data/dir/: DataAcl.t.html  DataDir.t.html  DataFileEntry.t.html  DirEntry.t.html  DirectoryDeleted.t.html  DirectoryListing.t.html  DirectoryUpdated.t.html  ReadAcl.t.html  enum.DirEntry.html  enum.ReadAcl.html  index.html  sidebar-items.js  struct.DataAcl.html  struct.DataDir.html  struct.DataFileEntry.html  struct.DirectoryDeleted.html  struct.DirectoryListing.html  struct.DirectoryUpdated.html
algorithmia/data/file/: DataFile.t.html  DataResponse.t.html  FileAdded.t.html  FileDeleted.t.html  index.html  sidebar-items.js  struct.DataFile.html  struct.DataResponse.html  struct.FileAdded.html  struct.FileDeleted.html
algorithmia/data/path/: DataPath.t.html  HasDataPath.t.html  index.html  sidebar-items.js  struct.DataPath.html  trait.HasDataPath.html
algorithmia/error/: ApiErrorResponse.t.html  enum.Error.html  fn.decode.html  index.html  sidebar-items.js  struct.ApiError.html  struct.ApiErrorResponse.html
algorithmia/examples/: datatest.rs  dijkstra.rs
algorithmia/mime/: enum.Attr.html  enum.SubLevel.html  enum.TopLevel.html  enum.Value.html  index.html  struct.Mime.html  type.Param.html
algorithmia/src/: client.rs  entrypoint.rs  error.rs  lib.rs
algorithmia/src/algo/: algorithm.rs  entrypoint.rs  macros.rs  mod.rs
algorithmia/src/data/: dir.rs  file.rs  mod.rs  object.rs  path.rs
entrypoint/: Cargo.toml  README.md
entrypoint/src/: lib.rs
examples/: algo.rs  algodata.rs  datatest.rs  dijkstra.rs  faas_algo_io.rs  faas_binary.rs  faas_custom.rs  faas_primitive.rs  faas_stateful.rs  faas_string.rs
examples/faas/: .gitignore  Cargo.toml
examples/handlers/: Cargo.toml
implementors/collections/borrow/: trait.Borrow.js  trait.IntoCow.js  trait.ToOwned.js
implementors/collections/string/: trait.ToString.js
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.FromError.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.LowerExp.js  trait.Pointer.js  trait.Write.js
implementors/core/hash/: trait.BuildHasher.js  trait.Hash.js  trait.HashState.js  trait.Hasher.js
implementors/core/iter/: trait.DoubleEndedIterator.js  trait.ExactSizeIterator.js  trait.Extend.js  trait.FromIterator.js  trait.IntoIterator.js  trait.Iterator.js  trait.RandomAccessIterator.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/num/: trait.Zero.js
implementors/core/ops/: trait.Add.js  trait.AddAssign.js  trait.BitAnd.js  trait.BitAndAssign.js  trait.BitOr.js  trait.BitOrAssign.js  trait.BitXor.js  trait.BitXorAssign.js  trait.BoxPlace.js  trait.Boxed.js  trait.CoerceUnsized.js  trait.Deref.js  trait.DerefMut.js  trait.Div.js  trait.DivAssign.js  trait.Drop.js  trait.FnOnce.js  trait.InPlace.js  trait.Index.js  trait.IndexMut.js  trait.Mul.js  trait.MulAssign.js  (+9 more)
implementors/rand/: trait.Rng.js  trait.SeedableRng.js
src/: algorithm.rs  client.rs  collection.rs  entrypoint.rs  error.rs  faas.rs  handler.rs  json-rustc-serialize.rs  json-serde.rs  json_helpers.rs  lib.rs
src/algo/: algorithm.rs  bytevec.rs  entrypoint.rs  macros.rs  mod.rs  result.rs  version.rs
src/algorithmia/: algorithm.rs.html  client.rs.html  collection.rs.html  error.rs.html  lib.rs.html
src/data/: dir.rs  file.rs  mod.rs  object.rs  path.rs
(+54 files in other folders)
