[package]
name = "algorithmia"
version = "2.1.3"
license = "MIT"
authors = ["Anthony Nowell <anthony@algorithmia.com>"]

description = "Client for calling algorithms and managing data hosted on the Algorithmia marketplace"
documentation = "http://docs.rs/algorithmia"
repository = "https://github.com/algorithmiaio/algorithmia-rust"
homepage = "https://algorithmia.com/developers/clients/rust/"
readme = "README.md"
keywords = ["algorithmia", "algorithm", "client", "machine-learning"]
categories =["algorithms", "web-programming::http-client", "science"]
build = "build.rs"

[badges]
travis-ci = { repository = "algorithmiaio/algorithmia-rust" }
appveyor = { repository = "algorithmiaio/algorithmia-rust" }

[dependencies]
url = "1.4"
serde = { version = "0.9", optional = true }
serde_json = { version = "0.9", optional = true }
serde_derive = { version = "0.9", optional = true }
rustc-serialize = { version = "0.3.19", optional = true }
base64 = "0.3.0"
quick-error = "1.1.0"
error-chain = "0.8.1"
mime = "0.2.2"
reqwest = "0.5"
chrono = { version = "=0.3.0", features = ["serde"] }

[dependencies.hyper]
version = "0.10"
default-features = false

[build-dependencies]
rustc_version = "0.1.7"

[features]
default = ["with-serde"]
with-serde = ["serde", "serde_json", "serde_derive", "chrono/serde"]
with-rustc-serialize = ["rustc-serialize", "chrono/rustc-serialize"]
nightly = []
