[package]
name = "algorithmia"
version = "3.0.0-beta"
license = "MIT"
authors = ["Anthony Nowell <anthony@algorithmia.com>"]
description = "Client for calling algorithms and managing data hosted using Algorithmia"
documentation = "http://docs.rs/algorithmia"
repository = "https://github.com/algorithmiaio/algorithmia-rust"
homepage = "https://algorithmia.com/developers/clients/rust/"
readme = "README.md"
keywords = ["algorithmia", "algorithm", "machine-learning", "ai", "ml"]
categories =["algorithms", "web-programming::http-client", "science"]
build = "build.rs"
edition = "2018"

[badges]
travis-ci = { repository = "algorithmiaio/algorithmia-rust" }
appveyor = { repository = "algorithmiaio/algorithmia-rust" }

[dependencies]
url = "1.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.10.1"
mime = "0.3.13"
reqwest = "0.9.4"
chrono = { version = "0.4", features = ["serde"] }
http = "0.1.15"
headers-ext = "0.0.4"
algorithmia-entrypoint = { path = "./entrypoint", optional = true }
backtrace = "0.3"

[dependencies.hyper]
version = "0.12"
default-features = false

[build-dependencies]
rustc_version = "0.2.1"

[features]
nightly = []
entrypoint = ["algorithmia-entrypoint"]
default = []

[package.metadata.docs.rs]
features = ["entrypoint"]
