[package]
name = "algorithmia"
version = "2.1.1"
license = "MIT"
authors = ["Anthony Nowell <anthony@algorithmia.com>"]
description = "Client for calling algorithms and managing data hosted on the Algorithmia marketplace"
documentation = "http://docs.rs/algorithmia"
repository = "https://github.com/algorithmiaio/algorithmia-rust"
homepage = "https://algorithmia.com/developers/clients/rust/"
readme = "README.md"
keywords = ["algorithmia", "algorithm", "client", "machine-learning"]
categories =["algorithms", "web-programming::http-client", "science"]
build = "build.rs"

[badges]
travis-ci = { repository = "algorithmiaio/algorithmia-rust" }
appveyor = { repository = "algorithmiaio/algorithmia-rust" }

[dependencies]
url = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.9.0"
error-chain = "0.8.1"
mime = "0.3.3"
reqwest = "0.9.4"
chrono = { version = "0.4", features = ["serde"] }
http = "0.1.13"
headers = "0.1.0"
headers-ext = "0.0.3"
headers-core = "0.0.1"
headers-derive = "0.0.1"

[dependencies.hyper]
version = "0.11"
default-features = false

[dependencies.algorithmia-entrypoint]
path = "../entrypoint"
optional = true

[build-dependencies]
rustc_version = "0.2.1"

[features]
nightly = []
entrypoint = ["algorithmia-entrypoint"]
default = []
