[package]
name = "algorithmia"
version = "3.0.0-beta"
license = "MIT"
authors = ["Anthony Nowell <anthony@algorithmia.com>"]
description = "Client for calling algorithms and managing data hosted using Algorithmia"
documentation = "http://docs.rs/algorithmia"
repository = "https://github.com/algorithmiaio/algorithmia-rust"
homepage = "https://algorithmia.com/developers/clients/rust/"
readme = "README.md"
keywords = ["algorithmia", "algorithm", "machine-learning", "ai", "ml", "client"]
categories =["algorithms", "web-programming::http-client", "science"]
build = "build.rs"
edition = "2018"

[badges]
travis-ci = { repository = "algorithmiaio/algorithmia-rust" }
appveyor = { repository = "algorithmiaio/algorithmia-rust" }

[dependencies]
url = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.9.0"
error-chain = "0.8.1"
mime = "0.3.3"
reqwest = "0.9.4"
chrono = { version = "0.4", features = ["serde"] }
http = "0.1.13"
headers-ext = "0.0.4"
algorithmia-entrypoint = { version = "0.1", optional = true }

[dependencies.hyper]
version = "0.11"
default-features = false

[build-dependencies]
rustc_version = "0.2.1"

[features]
nightly = []
entrypoint = ["algorithmia-entrypoint"]
default = []

[package.metadata.docs.rs]
features = ["entrypoint"]
