[package]
name = "algorithmia-entrypoint"
version = "0.1.0"
license = "MIT"
authors = ["Anthony Nowell <anthony@algorithmia.com>"]
edition = "2018"
description = "Macro for generating Algorithmia entrypoint code"
repository = "https://github.com/algorithmiaio/algorithmia-rust"
homepage = "https://algorithmia.com/developers/clients/rust/"

[lib]
proc-macro = true

[dependencies]
syntex_syntax = "0.59.1"
syn = { version = "0.11.11", features = ["full"] }
quote = "0.3"
